load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httpvalidate",
    srcs = ["validate.go"],
    importpath = "github.com/Zaba505/infra/pkg/httpvalidate",
    visibility = ["//visibility:public"],
)

go_test(
    name = "httpvalidate_test",
    srcs = [
        "validate_example_test.go",
        "validate_test.go",
    ],
    embed = [":httpvalidate"],
    deps = ["@com_github_stretchr_testify//assert"],
)
