load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "rest",
    srcs = ["rest.go"],
    embedsrcs = ["default_config.yaml"],
    importpath = "github.com/Zaba505/infra/pkg/rest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_swaggest_openapi_go//openapi3",
        "@com_github_z5labs_bedrock//:bedrock",
        "@com_github_z5labs_bedrock//pkg/app",
        "@com_github_z5labs_bedrock//pkg/config",
        "@com_github_z5labs_bedrock//rest",
        "@com_github_z5labs_bedrock//rest/endpoint",
        "@com_github_z5labs_bedrock//rest/mux",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_log//:log",
        "@io_opentelemetry_go_otel_log//noop",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_metric//noop",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_trace//noop",
    ],
)
