load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "rest",
    srcs = ["rest.go"],
    embedsrcs = ["default_config.yaml"],
    importpath = "github.com/Zaba505/infra/pkg/rest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_metric//:metric",
        "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:trace",
        "@com_github_swaggest_openapi_go//openapi3",
        "@com_github_z5labs_bedrock//:bedrock",
        "@com_github_z5labs_bedrock//pkg/app",
        "@com_github_z5labs_bedrock//pkg/appbuilder",
        "@com_github_z5labs_bedrock//pkg/config",
        "@com_github_z5labs_bedrock//rest",
        "@com_github_z5labs_bedrock//rest/endpoint",
        "@com_github_z5labs_bedrock//rest/mux",
        "@io_opentelemetry_go_contrib_bridges_otelslog//:otelslog",
        "@io_opentelemetry_go_contrib_detectors_gcp//:gcp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.26.0:v1_26_0",
        "@io_opentelemetry_go_otel_exporters_stdout_stdoutlog//:stdoutlog",
        "@io_opentelemetry_go_otel_log//:log",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_metric//noop",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_log//:log",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_trace//noop",
        "@org_golang_google_api//option",
    ],
)
