load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/Zaba505/infra/services/boot-image-proxy/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ftp",
        "//services/boot-image-proxy/proxy",
        "@com_github_fclairamb_ftpserverlib//:ftpserverlib",
    ],
)
