load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proxy",
    srcs = ["http.go"],
    importpath = "github.com/Zaba505/infra/services/boot-image-proxy/proxy",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_afero//mem",
        "@io_opentelemetry_go_otel//:otel",
    ],
)
