load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/Zaba505/infra/services/boot-image-proxy/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/framework",
        "@com_github_z5labs_bedrock//http/httpclient",
        "@com_github_z5labs_bedrock//pkg/slogfield",
        "@io_goftp_server_v2//:server",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//pkg/framework/frameworktest",
        "@com_github_stretchr_testify//assert",
    ],
)
