load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/Zaba505/infra/services/lb-sink/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/httpvalidate",
        "@com_github_uptrace_opentelemetry_go_extra_otelzap//:otelzap",
        "@com_github_z5labs_app//:app",
        "@io_opentelemetry_go_otel//:otel",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = ["@com_github_stretchr_testify//assert"],
)
