load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/Zaba505/infra/services/lb-sink/service",
    visibility = ["//visibility:public"],
    deps = ["//pkg/rest"],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
)
