load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/Zaba505/infra/services/machinemgmt/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/rest",
        "//services/machinemgmt/backend",
        "//services/machinemgmt/bootstrap",
        "@com_google_cloud_go_storage//:storage",
    ],
)
