load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = ["bootstrap.go"],
    importpath = "github.com/Zaba505/infra/services/machinemgmt/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/rest",
        "//services/machinemgmt/backend",
        "@com_github_z5labs_bedrock//rest/endpoint",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
    ],
)
