load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/Zaba505/infra/services/machinemgmt/service",
    visibility = ["//visibility:public"],
    deps = [
        "//services/machinemgmt/service/backend",
        "@com_github_z5labs_app//:app",
        "@com_github_z5labs_app//http",
        "@com_github_z5labs_app//http/httpvalidate",
        "@com_github_z5labs_app//pkg/otelconfig",
        "@com_google_cloud_go_storage//:storage",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//services/machinemgmt/service/backend",
        "@com_github_stretchr_testify//assert",
    ],
)
