load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["tftp.go"],
    importpath = "github.com/Zaba505/infra/services/tftp/service",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pin_tftp_v3//:tftp",
        "@com_github_shurcool_githubv4//:githubv4",
        "@com_github_uptrace_opentelemetry_go_extra_otelzap//:otelzap",
        "@com_github_z5labs_app//:app",
        "@com_github_z5labs_app//http",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)
