load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "backend",
    srcs = [
        "common_options.go",
        "error.go",
        "storage.go",
    ],
    importpath = "github.com/Zaba505/infra/services/machinemgmt/service/backend",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_googleapis_gax_go_v2//:gax-go",
        "@com_github_uptrace_opentelemetry_go_extra_otelzap//:otelzap",
        "@com_google_cloud_go_storage//:storage",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_uber_go_zap//:zap",
    ],
)
